--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "0.11.1"
+    "regenerator-runtime": "0.11.1",
+    "taro-ui": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.8",
