--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tarojs/taro-tt": "2.0.5",
     "@tarojs/taro-weapp": "2.0.5",
     "babel-runtime": "^6.26.0",
+    "classnames": "^2.2.6",
     "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
     "redux": "^4.0.0",
